examples/benchmark/source/basic/read-eval-print/src/invalid/syntax-error/index.js
console.log(1; // => SyntaxError: missing ) after argument list